--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "homepage": "https://github.com/Chen-Abudi/around-express#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "helmet": "^5.1.1"
+    "helmet": "^5.1.1",
+    "mongoose": "^6.5.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
