--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,10 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "no-useless-escape": "off",
+    "comma-dangle": "off",
+    "operator-linebreak": "off",
+    "function-paren-newline": "off"
   }
 }
