--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "helmet": "^5.1.1",
     "mongoose": "^6.5.4",
     "validator": "^13.7.0"
