--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "function-paren-newline": "off",
     "object-curly-newline": "off",
     "newline-per-chained-call": "off",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+    "no-console": "off"
   }
 }
