--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project 12th in Back End working with server: working with databases, setting up testing and security and deploying it on a remote machine. Main goal is to create a server with full API and authorization.",
   "main": "app.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
     "start": "node app.js",
@@ -26,6 +27,9 @@
     "url": "https://github.com/Chen-Abudi/around-express/issues"
   },
   "homepage": "https://github.com/Chen-Abudi/around-express#readme",
+  "resolutions": {
+    "ip": "2.0.1"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -36,9 +40,11 @@
     "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
     "helmet": "^5.1.1",
+    "ip": "^2.0.1",
     "joi": "^17.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.4",
+    "socks": "^2.7.0",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
@@ -46,6 +52,7 @@
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^3.1.3",
+    "npm-force-resolutions": "^0.0.10"
   }
 }
