--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
+    "fast-xml-parser": ">=4.4.1",
     "helmet": "^5.1.1",
     "ip": "^2.0.1",
     "joi": "^17.6.2",
@@ -52,6 +53,7 @@
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "fast-xml-parser": ">=4.4.1",
     "nodemon": "^3.1.3",
     "npm-force-resolutions": "^0.0.10"
   }
